# plang2

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  plang.sln  plang.vcxproj  plang.vcxproj.filters
doc/: Russelltrans.tex  bound_types.tex  plang.dot  semantics.tex  typecheck.tex  verification.tex
include/: Doxyfile  autoptr.h  indenting_stream.h  lexer.h  llir.h  node_analysis.h  parser_context.h  type_lattice.h  typecheck.h  utils.h
include/ir/: base.h  builtins.h  declarations.h  expressions.h  nodes.inl  numbers.h  roles.inl  statements.h  types.h  visitor.h
libp/: plang.h  printers.c
mpir-2.3.0/: .gitattributes  CMakeLists.txt
mpir-2.3.0/build.vc10/: cfg.h  mpir-tests.sln  postbuild.bat
mpir-2.3.0/build.vc10/dll_mpir_core2/: dll_mpir_core2.vcxproj  dll_mpir_core2.vcxproj.filters
mpir-2.3.0/build.vc10/dll_mpir_gc/: dll_mpir_gc.vcxproj  (+1 more)
src/: CMakeLists.txt  autoptr.cpp  backend_c.cpp  backend_c.h  backend_debug.cpp  backend_debug.h  backend_pvs.cpp  backend_pvs.h  callgraph.cpp  callgraph.h  check_assignments.h  collect_constraints.cpp  collect_constraints.h  cvc3_solver.cpp  cvc3_solver.h  generate_callgraph.cpp  generate_callgraph.h  generate_name.cpp  generate_name.h  generate_semantics.cpp  generate_semantics.h  ir.cpp  ir_builtins.cpp  lexer.cpp  lexer.h  llir.cpp  llir_process.cpp  llir_process.h  name_reset.cpp  name_reset.h  node_analysis.cpp  node_analysis.h  numbers.cpp  optimization.cpp  optimization.h  options.cpp  options.h  parser.cpp  parser.h  parser_context.cpp  (+36 more)
src/ir/: base.cpp  builtins.cpp  declarations.cpp  expressions.cpp  statements.cpp  type_array.cpp  type_derived.cpp  type_predicate.cpp  type_struct.cpp  type_subtype.cpp  type_union.cpp  types.cpp  visitor.cpp
src/transformations/: predicate_inlining.cpp  predicate_inlining.h  tail_recursion_elimination.cpp  tail_recursion_elimination.h
src/typecheck/: compact.cpp  eval.cpp  expand.cpp  explode.cpp  guess.cpp  infer.cpp  lift.cpp  operations.cpp  operations.h  prune.cpp  refute.cpp  unify.cpp
test/: BST.psrc  BST_2.psrc  BST_3.psrc  BST_4.psrc  Jordano.psrc  LU.psrc  arrays.txt  distance2d.psrc  fibonacci.psrc  fibonacci2.psrc  generators.txt  ip.psrc  ip.txt  jordano.psrc  keys.psrc  keys2.psrc  list.psrc  power.psrc  primes.psrc  strings.psrc  strings.txt  struct_mut.psrc  switch_real.psrc  test.psrc  time.psrc  unions.txt
tests/: CMakeLists.txt  sample.psrc
tests/backend_pvs/: array.psrc  array.psrc.pvs  enum.psrc  enum.psrc.pvs  example.psrc  example.psrc.pvs  formula.psrc  formula.psrc.pvs  list.psrc  list.psrc.pvs  set.psrc  set.psrc.pvs  variable.psrc  variable.psrc.pvs
tests/callgraph/: base_test.psrc  base_test.psrc.dot  call_arguments.psrc  call_arguments.psrc.dot  call_results.psrc  call_results.psrc.dot  functioncall.psrc  functioncall.psrc.dot  lambda.psrc  lambda.psrc.dot  multiple_calls.psrc  multiple_calls.psrc.dot  printing_graph_SCC.psrc  printing_graph_SCC.psrc.dot  same_names.psrc  same_names.psrc.dot
tests/cvc3/: expressions.psrc  literals.psrc  replacement.psrc  types.psrc
tests/indenting_stream/: custom_indentation.in  custom_indentation.out  custom_level.in  custom_level.out  indent_underflow.in  indent_underflow.out  indent_unindent.in  inline.in  inline.out  inline_newline.in  inline_trim.in  midline_indent.in  midline_indent.out  newline.in  newline.out  single_line.in  skip_line.in  skip_line.out  two_lines.in  two_lines.out  verbatim.in  verbatim.out
tests/inference/: accessors.psrc  arithmetic_overflow.psrc  array_constructor.psrc  array_iterator.psrc  array_part.psrc  binder.psrc  formula_bounded_variables.psrc  lambda.psrc  literals.psrc  literals_array.psrc  literals_negative.psrc  literals_structured.psrc  named_reference_type_restoring.psrc  param_array.psrc  pragmas.psrc  predicate_ref.psrc  procedure_call.psrc  quantified_formula_type.psrc  recognizers.psrc  recursive_types.psrc  replacement.psrc  struct_constructor.psrc  ternary_if_type.psrc  union_bounds.psrc  union_monotonicity.psrc  union_type.psrc
tests/moving_out/: array_constructor.psrc  example.psrc
tests/parsing/: accessors.psrc  array_subtype.psrc  field_expr.psrc  formula_measure.psrc  formula_result.psrc  function_call_without_arguments.psrc  import.psrc  jumps.psrc  label_in_module.psrc  lemma_status.psrc  literal.psrc  logic_gcd.psrc  logic_mul.psrc  normalize_binary.psrc  not_redefined_variables.psrc  predicate_type.psrc  quantifier.psrc  recognizers.psrc  redefined_formulas.psrc  redefined_modules.psrc  redefined_predicates.psrc  redefined_type.psrc  redefined_variables.psrc  replacement.psrc  subformula_args.psrc  submodules.psrc  ternary_if_call.psrc  variable_declarations.psrc
tests/prettyprinter/: array_constructor.psrc  array_iterator.psrc  binder.psrc  call_branch_label_after_branch_arg.psrc  cast.psrc  decls_order.psrc  field_expr.psrc  hyperfunction_call.psrc  identifier_path.psrc  jumps_and_labels.psrc  labels_and_simply_operators.psrc  map_constructor.psrc  module_ordering.psrc  modules_and_pred_in_pred.psrc  predicate_type.psrc  simply_formulas.psrc  struct_constructor.psrc  type_and_variable_decls.psrc  types.psrc  union_constructor.psrc  union_element.psrc  var_decl_in_call.psrc
tests/rewriting/: named_references.psrc
tests/semantics/: arCons.psrc  arMod.psrc  arSum.psrc  compat.psrc  example.psrc  natSum.psrc  sample1.psrc  sample2.psrc  switch_real.psrc
tests/standart_construct/: if.psrc  while.psrc
tests/statement_tree/: example.psrc  example.psrc.dot  moving_out_call.psrc
tests/transformation/: tail_recursion.psrc
tests/transformation/predicate_inlining/: hyperfunction.psrc
tests/transformation/tail_recursion/: tail_recursion.psrc
tests/verification/: Adder.psrc  conjunctive_normal_form.psrc  if_call.psrc  logic.psrc  logic_call.psrc  split.psrc  submodules.psrc  switch.psrc
tools/: test.py  test.sh  test_cg.sh  test_cg_sort.py  test_cond.sh  test_cvc3.sh  test_indenting_stream.sh  test_ot.sh  test_ot_pi.sh  test_pp.sh  test_pvs.sh  test_st.sh  test_st_t.sh  test_verification_tests.sh  test_vf.sh
(+33 files in other folders)
